--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Mastilo",
   "license": "ISC",
   "devDependencies": {
+    "chart.js": "^3.5.1",
     "grunt": "^1.4.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-sass": "^2.0.0",
